<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTit"
            android:textSize="30dp"
            android:hint="@string/hint_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/edtDate"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtContent"
            android:textSize="20dp"
            android:hint="@string/hint_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTag"
            android:textSize="20dp"
            android:textStyle="italic"
            android:hint="@string/hint_tag"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/alignBar">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/left"
                android:layout_alignParentLeft="true"
                android:textSize="10dp"
                android:text="@string/align_left"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/center"
                android:layout_centerHorizontal="true"
                android:textSize="10dp"
                android:text="@string/align_center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/right"
                android:layout_alignParentRight="true"
                android:textSize="10dp"
                android:text="@string/align_right"/>
        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnSave"
            android:text="@string/save_btn"/>

    </LinearLayout>



</ScrollView>